initial basic layout of home page

--- a/less/global.less
+++ b/less/global.less
@@ -1,9 +1,40 @@
 * {
     box-sizing: border-box;
+    margin:0;
+    padding: 0;
+    max-width:100%;
   }
   
   #container {
-border: 2px solid grey;
+    max-width: 100%;
+    border: 2px solid grey;
+    background-color: #D4AEA8;
+    display:flex;
+    flex-wrap:wrap;
+  }
+
+  html{
+      font-size: 62.5%;
+    
+  }
+
+  h1{
+      color: #C12E29;
+      font-size: 5.0rem;
+
+  }
+
+  h2{
+      color: @titles-color;
+      font-size:@titles-size;
+  }
+
+  .logo{
+      border-radius: 28%;
+  }
+
+  p{
+      font-size: 2.0rem;
   }
 
   
