top nav/logo done

--- a/less/global.less
+++ b/less/global.less
@@ -7,10 +7,8 @@
   
   #container {
     max-width: 100%;
-    border: 2px solid grey;
-    background-color: #D4AEA8;
-    display:flex;
-    flex-wrap:wrap;
+    
+
   }
 
   html{
@@ -20,7 +18,8 @@
 
   h1{
       color: #C12E29;
-      font-size: 5.0rem;
+      font-size: 10rem;
+      text-align: center;
 
   }
 
@@ -29,9 +28,7 @@
       font-size:@titles-size;
   }
 
-  .logo{
-      border-radius: 28%;
-  }
+  
 
   p{
       font-size: 2.0rem;
