--- a/less/mixins.less
+++ b/less/mixins.less
@@ -10,4 +10,12 @@
     justify-content: @justify;
     align-content: @align;
 
+} //layout display for text in divs
+
+.img-style(){
+    border-radius: 20%;
+    width: 50%;
+    margin: 0 auto;
+
+
 }
