--- a/css/index.css
+++ b/css/index.css
@@ -134,54 +134,53 @@ table {
 }
 #container {
   max-width: 100%;
-  border: 2px solid grey;
-  background-color: #D4AEA8;
-  display: flex;
-  flex-wrap: wrap;
 }
 html {
   font-size: 62.5%;
 }
 h1 {
   color: #C12E29;
-  font-size: 5rem;
+  font-size: 10rem;
+  text-align: center;
 }
 h2 {
   color: #81B3B2;
   font-size: 3.5rem;
 }
-.logo {
-  border-radius: 28%;
-}
 p {
   font-size: 2rem;
+}
+nav {
+  width: 80%;
+  display: inline-block;
+  font-size: 2rem;
+  text-decoration: none;
+  height: 60px;
+  text-align: center;
+  padding: 3%;
+}
+nav a {
+  margin-left: 7%;
+  margin-right: 7%;
+}
+.head {
+  width: 100%;
+  background-color: #ebeaea;
+  position: fixed;
+  display: block;
+}
+.head .logo {
+  border-radius: 30%;
+  float: right;
+  width: 8%;
+  margin-right: 5%;
 }
 .banner-img {
   border: 2px solid black;
   background-size: cover;
   width: 100%;
-  height: 75vh;
-}
-.head {
-  border: 2px solid brown;
-  display: flex;
-  justify-content: space-between;
-  align-content: stretch;
-  width: 100%;
-}
-.head nav {
-  border: 2px solid blue;
-  width: 80%;
-  margin: 5%;
-  display: flex;
-  justify-content: space-evenly;
-  align-content: center;
-}
-.top {
-  border: 2px solid black;
-  display: flex;
-  justify-content: space-between;
-  align-content: center;
+  height: 70vh;
+  margin-top: 5%;
 }
 .intro {
   border: 2px solid blue;
@@ -198,7 +197,9 @@ p {
 }
 .intro .intro-img {
   border: 2px solid turquoise;
+  border-radius: 20%;
   width: 50%;
+  margin: 0 auto;
 }
 .video {
   border: 2px solid green;
@@ -214,12 +215,14 @@ p {
 }
 .body .body-img {
   border: 2px solid goldenrod;
+  border-radius: 20%;
   width: 50%;
+  margin: 0 auto;
 }
 .body .body-text {
   border: 2px solid yellow;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-content: center;
   flex-wrap: wrap;
 }
@@ -244,4 +247,8 @@ footer nav {
   display: flex;
   justify-content: space-evenly;
   align-content: center;
+}
+footer nav a {
+  margin-left: 7%;
+  margin-right: 7%;
 }
