--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,37 +1,37 @@
 
 
+.head{
+
+    width:100%;
+    background-color: rgb(235, 234, 234);
+    position:fixed;
+    display:block;
+
+    
+
+
+
+
+
+.logo{
+    border-radius: 30%;
+    float:right;
+    width:8%;
+    margin-right:5%;
+
+}//logo div end
+
+} //head-div end
 
 .banner-img{
     border: 2px solid black;
     background-size: cover;
     width:100%;
-    height: 75vh;
+    height: 70vh;
+    margin-top:5%;
+    
 } //top banner-img end
 
-
-.head{
-    border:2px solid brown;
-    display:flex;
-    .layout(space-between, stretch);
-    width:100%;
-
-nav{
-    border:2px solid blue;
-    width:80%;
-    margin:5%;
-    display:flex;
-    .layout(space-evenly, center);
-
-
-    
-} //nav div end
-
-} //head-div end
-
-.top{
-    border:2px solid black;
-    .layout(space-between, center);
-}
 
 .intro{
 border: 2px solid blue;
@@ -46,8 +46,7 @@ border: 2px solid blue;
 
 .intro-img{
     border:2px solid turquoise;
-    width:50%;
-    
+    .img-style();
 
 } //intro-img div end
 
@@ -62,15 +61,17 @@ border: 2px solid blue;
 .body{
     border:2px solid purple;
     .layout(space-evenly, center);
+    
 
   .body-img{
       border:2px solid goldenrod;
-      width:50%;
+      .img-style();
+
   } //body-img div end
 
   .body-text{
       border: 2px solid yellow;
-      .text(space-between, center);
+      .text(space-around, center);
       flex-wrap:wrap;
   }
 
@@ -96,5 +97,12 @@ footer{
     margin:5%;
     display:flex;
     .layout(space-evenly, center);
-    } //footer nav
+
+    a{
+        
+        margin-left:7%;
+        margin-right:7%;
+
+    }//nav links end
+    } //nav end
 } //footer end
