--- a/less/global.less
+++ b/less/global.less
@@ -8,6 +8,7 @@
   #container {
     max-width: 100%;
     
+    
 
   }
 
@@ -18,7 +19,7 @@
 
   h1{
       color: #C12E29;
-      font-size: 10rem;
+      font-size: 12rem;
       text-align: center;
 
   }
@@ -26,12 +27,27 @@
   h2{
       color: @titles-color;
       font-size:@titles-size;
+      border:2px solid black;
+      margin-bottom:5%;
+      margin-top:3%;
   }
 
-  
-
-  p{
-      font-size: 2.0rem;
+  h3{
+      font-size: 5.0rem;
   }
-
   
+p{
+    color: @text-color;
+    font-size: @text-size;
+    border:2px solid red;
+    line-height: 2;
+}
+
+button{
+    .btn-style();
+}
+  
+
+//////////TEAM PAGE STYLING HERE ////////
+
+
