--- a/less/variables.less
+++ b/less/variables.less
@@ -4,9 +4,10 @@
 
 
 @titles-color: #81B3B2; //h2 color
-@titles-size: 3.5rem;   //h2 size
+@titles-size: 7.5rem;   //h2 size
 
 
-
+@text-color:#252A33; //main font color
+@text-size: 3.0rem; //main font size
 
 
