--- a/less/global.less
+++ b/less/global.less
@@ -8,7 +8,11 @@
   #container {
     max-width: 100%;
     
-    
+    p{
+        color: @text-color;
+        font-size: @text-size;
+        line-height: 2;
+    }
 
   }
 
@@ -27,27 +31,20 @@
   h2{
       color: @titles-color;
       font-size:@titles-size;
-      border:2px solid black;
       margin-bottom:5%;
       margin-top:3%;
   }
 
   h3{
       font-size: 5.0rem;
+      color: @team-main;
   }
   
-p{
-    color: @text-color;
-    font-size: @text-size;
-    border:2px solid red;
-    line-height: 2;
-}
 
 button{
     .btn-style();
 }
   
 
-//////////TEAM PAGE STYLING HERE ////////
 
 
