--- a/less/home-page.less
+++ b/less/home-page.less
@@ -24,7 +24,7 @@
 } //head-div end
 
 .banner-img{
-    border: 2px solid black;
+   // border: 2px solid black;
     background-size: cover;
     width:100%;
     height: 70vh;
@@ -34,19 +34,20 @@
 
 
 .intro{
-border: 2px solid blue;
+//border: 2px solid blue;
 .layout(space-evenly, center);
 margin:5%;
 
 .intro-text{
-    border:2px solid darkblue;
+   // border:2px solid darkblue;
     .layout(space-around, center);
     flex-wrap:wrap;
+    padding:3%;
 
 } //intro-text end
 
 .intro-img{
-    border:2px solid turquoise;
+   // border:2px solid turquoise;
     .img-style();
 
 } //intro-img div end
@@ -54,34 +55,35 @@ margin:5%;
 } //intro div end
 
 .video{
-    border:2px solid green;
+   // border:2px solid green;
     .layout(space-around, center);
     margin:5%;
     
 } //video div end
 
 .body{
-    border:2px solid purple;
+   // border:2px solid purple;
     .layout(space-evenly, center);
     margin:5%;
     
 
   .body-img{
-      border:2px solid goldenrod;
+     // border:2px solid goldenrod;
       .img-style();
 
   } //body-img div end
 
   .body-text{
-      border: 2px solid yellow;
+    //  border: 2px solid yellow;
       .layout(space-evenly, center);
       flex-wrap:wrap;
+      padding:3%;
   }
 
 } //body div end
 ;
 .bottom-img{
-    border:2px solid olivedrab;
+  //  border:2px solid olivedrab;
 
     width:90%;
     height: 50vh;
@@ -91,7 +93,7 @@ margin:5%;
 }
 
 footer{
-    border:2px solid orange;
+ //   border:2px solid orange;
     display:flex;
     .layout(space-evenly, center);
     width:90%;
@@ -104,15 +106,17 @@ footer{
         text-align: center;
     }
         
-    .team-page{
-        border:2px solid blue;
+    .team-link{
+        
         .layout(space-around, flex-end);
         width:50%;
         padding:5%;
         font-size: 3rem;
         text-align: center;
         }
-
-
+ 
+ul{
+    line-height: 2;
+}
   
 } //footer end
