--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,9 +6,10 @@
 }  //layout display
 
 .team-layout(){
-    width:80%;
-    margin:5%;
-    border:2px dashed #D7DDE1;
+    width:70%;
+    justify-content: center;
+    margin: 0 auto;
+    
 }
 
 .img-style(){
@@ -17,6 +18,19 @@
     margin: 0 auto;
 
 } //body images styling main page
+
+.team-content(){
+    border:2px dashed #D7DDE1;
+        width:90%;
+        margin:5%;
+        text-align: center;
+} //team page content
+
+.team-img(){
+    border-radius: 50%;
+    width: 45%;
+    
+}//team page image styling
 
 .btn-style(@bg-color:#D4AEA8, @font-color: #8CA744, @font-size:2rem, @width: 50% ){
 
