--- a/less/navigation.less
+++ b/less/navigation.less
@@ -18,3 +18,8 @@ nav{
 
 } //nav div end
 
+.team-nav{
+    border:2px solid green;
+    width:100%;
+    background-color: rgb(235, 234, 234);
+} //nav on team page end
