--- a/less/variables.less
+++ b/less/variables.less
@@ -7,7 +7,9 @@
 @titles-size: 7.5rem;   //h2 size
 
 
-@text-color:#252A33; //main font color
+@text-color:rgb(14, 60, 146); //main font color
 @text-size: 3.0rem; //main font size
 
-
+@team-color: #C12E29; //main text on team page
+@team-size: 4.0rem; //main text on team page
+@team-main: #81B325; //h3 color
