--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,10 +7,13 @@
     position:fixed;
     display:block;
 
-    
+    @media @mobile{
+       
+        display: flex;
+        .layout(space-between, center);
+        position:absolute;
 
-
-
+    } //head mobile query  end
 
 
 .logo{
@@ -18,6 +21,11 @@
     float:right;
     width:8%;
     margin-right:5%;
+
+    @media @mobile{
+        width:30%;
+
+    } //logo mobile query end
 
 }//logo div end
 
@@ -29,6 +37,11 @@
     width:100%;
     height: 70vh;
     margin-top:5%;
+
+    @media @mobile{
+        height: 33vh;
+      
+    }//banner mobile query end
     
 } //top banner-img end
 
@@ -38,11 +51,21 @@
 .layout(space-evenly, center);
 margin:5%;
 
+@media @mobile{
+    
+    flex-direction:column;
+    width:100%;
+    margin: 0 auto;
+}//intro mobile query end
+
 .intro-text{
    // border:2px solid darkblue;
     .layout(space-around, center);
     flex-wrap:wrap;
     padding:3%;
+    line-height:2;
+    color: @text-color;
+        font-size: @text-size;
 
 } //intro-text end
 
@@ -50,14 +73,49 @@ margin:5%;
    // border:2px solid turquoise;
     .img-style();
 
+    @media @mobile{
+        .mobile-img();
+    }//mobile intro image end
+
 } //intro-img div end
 
 } //intro div end
 
 .video{
-   // border:2px solid green;
-    .layout(space-around, center);
+   border:2px solid green;
+    .layout(space-between, center);
     margin:5%;
+    width:90%;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+    @media @mobile{
+        width:100%;
+        margin:0;
+    }//mobile video div end
+
+    .video-text{
+        line-height: normal;
+        width:30%;
+        color: @text-color;
+
+        @media @mobile{
+            width:100%;
+            margin:0, auto;
+        } //mobile video text end
+        
+    }//video text end
+
+    .youtube{
+        width:45%;
+        margin:0;
+
+        @media @mobile{
+        width:100%;
+        margin:0, auto;
+
+        }//mobile youtube video end
+    } //youtube video end
     
 } //video div end
 
@@ -65,19 +123,38 @@ margin:5%;
    // border:2px solid purple;
     .layout(space-evenly, center);
     margin:5%;
+
+    @media @mobile{
+        
+        flex-direction:column-reverse;
+        width:100%;
+    margin: 0 auto;
+    }//body mobile query end
     
 
   .body-img{
      // border:2px solid goldenrod;
       .img-style();
 
+      @media @mobile{
+        .mobile-img();
+    }//mobile body image end
+
   } //body-img div end
 
   .body-text{
-    //  border: 2px solid yellow;
+   
       .layout(space-evenly, center);
       flex-wrap:wrap;
       padding:3%;
+      line-height: 2;
+      color: @text-color;
+        font-size: @text-size;
+
+      @media @mobile{
+          line-height: normal;
+   
+      }//body-text mobile end
   }
 
 } //body div end
@@ -90,33 +167,49 @@ margin:5%;
     margin-left:5%;
     margin-right:5%;
     border-radius:3%;
+
+    @media @mobile{
+        display:none;
+        
+    }//bottom img mobile query end
 }
 
-footer{
- //   border:2px solid orange;
-    display:flex;
-    .layout(space-evenly, center);
-    width:90%;
-    margin:5%;
 
-    .help{
 
-        width:80%;
-        font-size: 2.0rem;
-        text-align: center;
-    }
-        
-    .team-link{
-        
-        .layout(space-around, flex-end);
-        width:50%;
-        padding:5%;
-        font-size: 3rem;
-        text-align: center;
-        }
- 
+
+.help{
+
+    width:100%;
+    font-size: 2.0rem;
+    
+    margin:0;
+
+
+    @media @mobile {
+        width:100%;
+
+}//help mobile end
+     
 ul{
-    line-height: 2;
-}
-  
-} //footer end
+line-height: 2;
+width:50%;
+
+}//list end
+
+
+    
+.team-link{
+    width:100%;
+    font-size: 3rem;
+    text-align: center;
+    
+
+    @media @mobile{
+        margin-top:3%;
+        padding:0;
+        font-size: 2rem;
+        border:2px dashed gray;
+
+    }//team page link mobile end
+    } //team link end
+} //help end
