--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,7 +6,7 @@
 }  //layout display
 
 .team-layout(){
-    width:70%;
+    width:80%;
     justify-content: center;
     margin: 0 auto;
     
@@ -14,10 +14,17 @@
 
 .img-style(){
     border-radius: 20%;
-    width: 50%;
-    margin: 0 auto;
-
+    width: 45%;
+    height: 550px;
+    margin-top:10%;
 } //body images styling main page
+
+.mobile-img(){
+    width:90%;
+    margin:0 auto;
+    border-radius: 10%;
+    height:400px;
+} //mobile query styling
 
 .team-content(){
     border:2px dashed #D7DDE1;
